fixed Navbar and Layout bugs

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,6 +6,11 @@
   --base-dark: #303030;
 }
 
+* {
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
 html {
   &::-webkit-scrollbar {
     width: 8px;
